changes in styles for fixing header on mobile screens for eXtension responsive theme

--- a/wp-content/themes/eXtension_responsive/style.css
+++ b/wp-content/themes/eXtension_responsive/style.css
@@ -88,6 +88,7 @@ src: url(http://themes.googleusercontent.com/static/fonts/sanchez/v1/9T6om-IyqE2
 	position: relative;
 	margin: 0 auto;
 }
+
 .site-footer {
 	margin-top: 30px;
 	padding-top: 30px;
@@ -169,6 +170,9 @@ img.alignright{
 	.site-title {
 		font-size: 45px;
 	}
+	.site-header {
+				background-size: 1200px auto !important;
+	}
 }
 
 @media (max-width: 643px) {
@@ -178,7 +182,7 @@ img.alignright{
 		min-height: 100px;
 	}
 	.site-title {
-		font-size: 30px;
+		font-size: 20px;
 		paddint-top: 0;
 	}
 
@@ -187,14 +191,23 @@ img.alignright{
 	}
 
 	.site-header{
-		max-height: 120px;
+		min-height: 100px;
 	}
 
 }
+
+
 
 /* Mobile devices */
 @media (max-width: 359px) {
 	.site-title {
 		font-size: 20px;
+		padding-right: 5px;
+	}
+	.site-header .home-link{
+		background-image: none;
+	}
+	.site-header {
+					background-size: 800px auto !important;
 	}
 }
